<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    tools:context=".view.details.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/icons"
                app:cardElevation="12dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_margin="14dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/lbl_title"
                        android:textColor="@color/primaryText"
                        android:text="@string/app_name"
                        android:ellipsize="end"
                        android:textSize="28sp"
                        android:maxLines="2"
                        android:gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" />
                    <TextView
                        android:id="@+id/lbl_duration"
                        android:text="@string/lbl_duration"
                        android:textSize="18sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_listeners"
                        android:text="@string/lbl_listeners"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_playcount"
                        android:text="@string/lbl_playcount"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_album"
                        android:text="@string/lbl_album"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/lbl_link"
                            android:text="@string/lbl_link"
                            android:textSize="18sp"
                            android:layout_marginTop="6dp"
                            android:gravity="center|start"
                            android:textColor="@color/secondaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/lbl_homepage"
                            android:text="@string/lbl_link"
                            android:textSize="18sp"
                            android:gravity="center|start"
                            android:textColor="@color/colorAccent"
                            android:autoLink="web"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/lbl_published"
                        android:text="@string/lbl_published"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_summary"
                        android:text="@string/lbl_summary"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_content"
                        android:text="@string/lbl_content"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/lbl_ontour"
                        android:text="@string/lbl_ontour"
                        android:textSize="18sp"
                        android:layout_marginTop="6dp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>